begin working on survey page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,8 @@ html(lang="en")
         .logo peianwu.com
         ul.flexc.sitemap
           li home
-          li projects
+          li
+            a(href="/survey") survey
           li about
 
       .main-section
