--- a/views/survey.jade
+++ b/views/survey.jade
@@ -2,13 +2,16 @@ extends layout
 
 block stylesheet
   link(rel="stylesheet", href="/stylesheets/survey.css")
+block scriptStart
 
 block content
   h1 Survey
   .survey
     div
       label(for="age") Age:
-      input#age(type="text" placeholder="full name")
+      input#age(type="text" placeholder="age")
     div
       label(for="gender") Gender:
       input#gender(type="text" placeholder="your gender")
+
+block scriptEnd
