--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="utf8")
     title= title
     link(rel="stylesheet", href="/stylesheets/style.css")
-    script(src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js")
     block stylesheet
     block scriptStart
   body.flexc
