--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,11 @@ body {
 }
 
 a {
+  color: #7b7b7b;
+  text-decoration: underline;
+}
+
+a:hover {
   color: steelblue;
   text-decoration: none;
 }
@@ -25,11 +30,13 @@ p {
 }
 
 hr {
-  height: 12px;
   border: 0;
-  box-shadow: inset 0 12px 12px -12px rgba(0,0,0,0.5);
-
+  height: 12px;
   width: 100%;
+  
+  box-shadow: inset 0 6px 6px -6px rgba(0,0,0,0.5);
+
+  
 }
 
 .flexc {
@@ -39,6 +46,10 @@ hr {
 }
 
 .wrapper {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+
   margin: 10px 20px;
   width: 760px;
 }
@@ -54,26 +65,27 @@ header {
 }
 
 .logo {
+  padding: 0 3px;
+
   background-color: #000;
   color: #fff;
   font-size: 1.2em;
-  padding: 0 3px;
+  
 }
 
 /*content section*/
 
-.main-section {
-  margin-top: 50px;
+.main {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+
+  min-height: 450px;
+  padding-top: 50px;
 }
 
 
 /*footer section*/
-
-footer {
-  position: absolute;
-  bottom: 30px;
-  width: 100%;
-}
 
 .sitemap {
   -webkit-justify-content: flex-end;
@@ -82,9 +94,10 @@ footer {
 }
 
 ul.sitemap li {
+  margin-top: 5px;
+  margin-left: 10px;
+
   color: #7d7d7d;
   font-size: 1em;
   list-style-type: none;
-  margin-top: 5px;
-  margin-left: 10px;
 }
