--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,8 @@ html(lang="en")
   body.flexc
     .wrapper.flexc
       header.flexc
-        .logo peianwu.com
+        .logo
+          a(href="/") peianwu.com
       section.main
         block content
       footer
