--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: steelblue;
+  color: #ffa500;
   text-decoration: none;
 }
 
@@ -34,9 +34,7 @@ hr {
   height: 12px;
   width: 100%;
   
-  box-shadow: inset 0 6px 6px -6px rgba(0,0,0,0.5);
-
-  
+  box-shadow: inset 0 3px 3px -3px rgba(0,0,0,0.5);
 }
 
 .flexc {
@@ -54,6 +52,10 @@ hr {
   width: 760px;
 }
 
+.projects {
+  overflow: hidden;
+}
+
 /*header section*/
 header {
   -webkit-flex-direction: column;
@@ -64,17 +66,20 @@ header {
   align-items: flex-end;
 }
 
-.logo {
-  padding: 0 3px;
-
+.logo a{
+  padding: 0 3px 2px;
+  
   background-color: #000;
   color: #fff;
-  font-size: 1.2em;
-  
+  font-size: 1em;
+  text-decoration: none;
+}
+
+.logo a:hover {
+  color: #ffa500;
 }
 
 /*content section*/
-
 .main {
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -84,9 +89,7 @@ header {
   padding-top: 50px;
 }
 
-
 /*footer section*/
-
 .sitemap {
   -webkit-justify-content: flex-end;
   -ms-justify-content: flex-end;
