--- a/views/about.jade
+++ b/views/about.jade
@@ -5,7 +5,7 @@ block stylesheet
 block scriptStart
 
 block content
-  h1 About me
+  h1 me
   section.aboutme.flexc
     .portrait
     
@@ -15,7 +15,7 @@ block content
           .label name:
           .detail Peter Wu
         li.flexc
-          .label city:
+          .label location:
           .detail Taipei, Taiwan
         li.flexc
           .label experience:
