--- a/views/about.jade
+++ b/views/about.jade
@@ -7,8 +7,8 @@ block scriptStart
 block content
   h1 me
   section.aboutme.flexc
-    .portrait
-    
+    .portrait.flexc
+      img.profilepic(src="/images/profile.png", alt="me")
     .info
       ul
         li.flexc 
