--- a/views/about.jade
+++ b/views/about.jade
@@ -5,9 +5,9 @@ block stylesheet
 block scriptStart
 
 block content
-  h1 me
   section.aboutme.flexc
     .portrait.flexc
+      h1 about me
       img.profilepic(src="/images/profile.png", alt="me")
     .info
       ul
