--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html(lang="en")
       header.flexc
         .logo
           a(href="/") peianwu.com
-      section.main
+      section.main.flexc
         block content
       footer
         hr
