--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -4,7 +4,7 @@ section.aboutme {
 }
 
 h1 {
-  margin-left: 20px;
+  margin-bottom: 10px;
 }
 
 .info ul li {
@@ -19,15 +19,17 @@ img.profilepic {
 }
 
 .portrait {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
   -webkit-align-items: center;
   -ms-align-items: center;
   align-items: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
+
+  min-width: 200px;
 }
 
 /*bio section*/
@@ -35,6 +37,7 @@ img.profilepic {
   -webkit-flex: 2;
   -ms-flex: 2;
   flex: 2;
+  margin-top: 20px;
 }
 
 .detail {
@@ -49,4 +52,18 @@ img.profilepic {
   text-align: right;
   width: 90px;
   color: #000;
+}
+
+/*responsive scenarios*/
+@media screen and (max-width: 640px) {
+  /*switch from row to column*/
+  section.aboutme {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  footer {
+    margin-top: 30px;
+  }
 }
