--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,7 +48,7 @@ hr {
   -ms-flex-direction: column;
   flex-direction: column;
 
-  margin: 10px 20px;
+  margin: 10px 45px;
   width: 760px;
 }
 
@@ -80,16 +80,23 @@ header {
 }
 
 /*content section*/
-.main {
+section.main {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 
   min-height: 450px;
   padding-top: 50px;
 }
 
 /*footer section*/
+footer a {
+  text-decoration: none;
+}
+
 .sitemap {
   -webkit-justify-content: flex-end;
   -ms-justify-content: flex-end;
