--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block stylesheet
   link(rel="stylesheet", href="/stylesheets/index.css")
 
 block content
-  h1 Welcome.
+  h1 Welcome
   .intro
     p.
       My name is Peter Wu, and I'm building this site 
