--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -29,6 +29,7 @@ img.profilepic {
   -ms-align-items: center;
   align-items: center;
 
+  min-height: 200px;
   min-width: 200px;
 }
 
@@ -37,7 +38,9 @@ img.profilepic {
   -webkit-flex: 2;
   -ms-flex: 2;
   flex: 2;
+
   margin-top: 20px;
+  min-width: 400px;
 }
 
 .detail {
