--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html(lang="en")
       header.flexc
         .logo
           a(href="/") peianwu.com
-      section.main.flexc
+      section.main.flexc.mainlayout
         block content
       footer
         hr
@@ -20,9 +20,9 @@ html(lang="en")
           li 
             a(href="/") home
           li
-            a(href="/survey") survey
-          li
             a(href="/about") about
+          li
+            a(href="http://blog.peianwu.com") blog
 
     script(src="/javascripts/layout.js")
     block scriptEnd
