--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,8 +1,72 @@
+.mainlayout {
+  -webkit-justify-content: space-between;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+}
+
+.left-index, .right-index {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.right-index {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-end;
+  -ms-align-items: flex-end;
+  align-items: flex-end;
+  -webkit-justify-content: flex-end;
+  -ms-justify-content: flex-end;
+  justify-content: flex-end;
+
+  margin-bottom: 25px;
+
+}
+
+.right-index ul {
+  margin-top: 5px;
+
+}
+
+.right-index ul li {
+  font-size: 0.9em;
+  list-style-type: none;
+}
+
+ul.project-list a {
+  color: #000;
+  opacity: 0.5;
+  text-decoration: none;
+}
+
+ul.project-list a:hover {
+  opacity: 1;
+}
+
 .intro {
   margin-top: 10px;
   min-width: 340px;
   width: 45%;
   color: #7d7d7d;
+}
+
+@media screen and (max-width: 640px) {
+  .mainlayout {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+  }
+
+  .right-index {
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+  }
 }
 
 @media screen and (max-device-width: 640px) {
@@ -12,4 +76,5 @@
     -ms-align-items: center;
     align-items: center;
   }
+
 }
