--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,8 @@ block content
         All the codes for this site can be found on 
         <a href="https://github.com/peianwu/peianwu2">github</a>.
   .right-index.flexc
-    h5 checkout my projects
-    ul.project-list
-      li
-        a(href="/math") a math problem generator
+    .project-list.flexc
+      h5 checkout my projects
+      ul
+        li
+          a(href="/math") a math problem generator
