--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 a {
-  color: #7b7b7b;
+  color: #7d7d7d;
   text-decoration: underline;
 }
 
@@ -38,12 +38,6 @@ hr {
   box-shadow: inset 0 3px 3px -3px rgba(0,0,0,0.5);
 }
 
-.flexc {
-   display: -webkit-flex;
-   display: -ms-flex;
-   display: flex;
-}
-
 .wrapper {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
@@ -55,6 +49,17 @@ hr {
 
 .projects {
   overflow: hidden;
+}
+
+/*custom global class, usable in other css files*/
+.flexc {
+   display: -webkit-flex;
+   display: -ms-flex;
+   display: flex;
+}
+
+.hide {
+  display: none;
 }
 
 /*header section*/
