--- a/views/math.jade
+++ b/views/math.jade
@@ -10,7 +10,7 @@ block content
       .button START
     .problembox.flexc.hide
       .questionblock.flexc
-        .label Question:
+        .label
         #question
       .choiceblock.flexc
         .label Answer:
