--- a/views/about.jade
+++ b/views/about.jade
@@ -31,5 +31,11 @@ block content
             The elegance and sophistication of the language compelled
             me to learn Node.js as the foundation of my backend 
             development.
+        li.flexc
+          .label follow me:
+          .detail
+            a(href="https://twitter.com/peianwu") twitter
+            |  > 
+            a(href="http://www.flickr.com/photos/105755513@N05/") flickr
 
 block scriptEnd
