--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html(lang="en")
           li
             a(href="/about") about
           li
-            a(href="http://blog.peianwu.com") blog
+            a(href="/blog") blog
 
     script(src="/javascripts/layout.js")
     block scriptEnd
