--- a/views/blog.jade
+++ b/views/blog.jade
@@ -13,7 +13,7 @@ block content
           .title.flexc
             .subject= post.subject
             .datetime= post.formatDatetime
-          .entry= post.entry
+          .entry!= post.entry
           
 
 block scriptEnd
