--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en")
     title= title
     link(rel="stylesheet", href="/stylesheets/style.css")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
+    script(src="/javascripts/googleanalytics.js")
     block stylesheet
     block scriptStart
   body.flexc
