--- a/views/blog.jade
+++ b/views/blog.jade
@@ -7,14 +7,14 @@ block content
   .showpost
     h1 Blog
     .blogs
-      each post, i in posts
+      - for (var i = posts.length - 1; i >= 0; i --) {
         hr
         .post
           .title.flexc
-            .subject= post.subject
-            .datetime= post.formatDatetime
-          .entry!= post.entry
-          
+            .subject= posts[i].subject
+            .datetime= posts[i].formatDatetime
+          .entry!= posts[i].entry
+      - }    
 
 block scriptEnd
   //- script(src="/javascripts/blogtest.js")
