--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -30,25 +30,44 @@
   list-style-type: none;
 }
 
-.project-list {
+.blog-list ul li{
+  -webkit-justify-content: flex-end;
+  -ms-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+
+.blog-list, .project-list {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   -webkit-align-items: flex-end;
   -ms-align-items: flex-end;
   align-items: flex-end;
+
+  margin: 5px 0;
+}
+
+.project-list {
   -webkit-justify-content: flex-end;
   -ms-justify-content: flex-end;
   justify-content: flex-end;
 }
 
-.project-list ul li a {
+.blog-list ul li a,
+.project-list ul li a,
+.postdate {
   color: rgb(125,125,125);
   text-decoration: none;
 }
 
+.blog-list ul li a:hover,
 .project-list ul li a:hover {
   color: rgb(0,0,0);
+}
+
+.postdate {
+  font-size: 0.8em;
 }
 
 .intro {
@@ -66,10 +85,6 @@
     -webkit-align-items: center;
     -ms-align-items: center;
     align-items: center;
-  }
-
-  .right-index {
-
   }
 
   .project-list {
